# bank_widget

./: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: data_loaders.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  search.py  utils.py  widget.py
tests/: conftest.py  test_data_loaders.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_search.py  test_utils.py  test_widget.py
