[project]
name = "aleksandrina_bank_widget"
version = "0.1.0"
description = "Виджет, который показывает несколько последних успешных банковских операций клиента."
authors = [
    {name = "Aleksandrina Anna",email = "kurai@vk.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
flake8 = "^7.3.0"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["venv", ".venv", "__pycache__"]
# Решение проблемы с двойным импортом
[[tool.mypy.overrides]]
module = ["src.*"]
package_root = ["src"]
